...
          fontWeight: 'medium',
          fontFamily: 'Inter',
        },
        tabBarLabel: ({ focused }) => {
          let label = '';
          if (route.name === 'Home-Screen') {
            label = 'Home';
          } else if (route.name === 'Courses') {
            label = 'My courses';
          } else if (route.name === 'Profile') {
            label = 'Profile';
          }
          return (
...
